<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.kpch.cheapmedicine.view_controller.StartScreenActivity"
    android:background="#ffffff">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:id="@+id/iv_splashScreen"
        android:src="@drawable/splash_screen"
        android:contentDescription="@string/splash_pic_name"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_copyright"
        android:id="@+id/tv_copyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="9sp"
        android:gravity="center"
        android:paddingBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_splachScreen"
        android:id="@+id/tv_splash"
        android:layout_above="@+id/tv_copyright"
        android:layout_centerHorizontal="true"
        android:textSize="7sp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />

</RelativeLayout>
