<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/cm1_border_field">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/rl_title"
        android:foregroundGravity="center_vertical">

        <ImageView
            android:layout_width="40px"
            android:layout_height="40px"
            android:id="@+id/imageView"
            android:src="@drawable/info_aptek_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:id="@+id/tv_aptek_title"
            style="@style/actionBar_title"
            android:layout_toRightOf="@+id/imageView"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_content"
        android:layout_below="@+id/rl_title"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_aptek_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:paddingBottom="5dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_city"
            android:id="@+id/tv_city_aptek"
            android:layout_below="@+id/tv_aptek_name"
            android:paddingLeft="3dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_city_aptek"
            android:layout_toRightOf="@+id/tv_city_aptek"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/tv_aptek_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_site"
            android:id="@+id/tv_site"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/field_city_aptek"
            android:paddingLeft="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_phone"
            android:id="@+id/tv_phone"
            android:layout_below="@+id/field_site"
            android:layout_alignParentLeft="true"
            android:paddingLeft="3dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_site"
            android:layout_alignParentTop="false"
            android:layout_toRightOf="@+id/tv_site"
            android:autoLink="web"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/field_city_aptek" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_phone"
            android:layout_toRightOf="@+id/tv_phone"
            android:autoLink="phone"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/field_site" />
    </RelativeLayout>

</RelativeLayout>