<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="stateHidden|adjustPan"
    tools:context="ru.kpch.cheapmedicine.view_controller.FindAnalogsActivity"
    style="@style/cm1_layouts">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_selectDrug"
        android:id="@+id/tv_selectDrug"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id2"
            android:layout_alignParentTop="false" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lv_names_in_DB"
        android:id="@+id/layout_filter"
        android:layout_below="@+id/tv_selectDrug"
        android:layout_alignRight="@+id/lv_names_in_DB"
        android:layout_marginTop="5dp"
        android:background="@drawable/cm1_border_field">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_filterSusp"
            android:button="@drawable/checkbox_selector"
            android:id="@+id/cb_filterSusp"
            style="@style/s_filter"
            android:background="#3f51b5" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_active_susp"
            android:spinnerMode="dropdown"
            android:scrollIndicators="right"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lv_names_in_DB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fastScrollAlwaysVisible="true"
        style="@style/ListView_withoutDeviders"
        android:background="@drawable/cm1_border_field"
        android:layout_marginTop="5dp"
        android:padding="3dp"

        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/layout_filter"
        android:layout_above="@+id/ad_view3" />

</RelativeLayout>
