<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="stateHidden|adjustPan"
    tools:context="ru.kpch.cheapmedicine.view_controller.HelpWithAnalogActivity"
    style="@style/cm1_layouts">

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_makeApplic"
        android:id="@+id/tv_addDrug_note"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_add_newDrug"
        android:layout_below="@+id/tv_addDrug_note"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="1"
        android:maxLength="100"
        android:inputType="textPersonName"
        style="@style/EditText_cm"
        android:background="@drawable/cm1_border_field"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="start"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:textColor="#0a7800"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSendRequest"
        android:id="@+id/b_addNewDrug"
        android:layout_below="@+id/et_add_newDrug"
        android:layout_centerHorizontal="true"
        style="@style/cm_buttons"
        android:nestedScrollingEnabled="false"
        android:onClick="onClickNeedHelp"
        android:enabled="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tv_addNew_state"
        android:layout_below="@+id/b_addNewDrug"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/ad_view" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progBar_needHelp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    </RelativeLayout>
