<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.kpch.cheapmedicine.view_controller.AnalogsActivity"
    style="@style/cm1_layouts">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_name_underline"
        android:id="@+id/tv_analogs_s_Drug"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/s_MenuItems" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_analogs_n_Drug"
        android:textColor="#d20000"
        android:textStyle="bold"
        android:layout_below="@+id/tv_analogs_s_Drug"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal|left"
        style="@style/s_chosen_drug"
        android:onClick="onClickDrugNotice"
        android:clickable="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:maxWidth="175dp"
        android:longClickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_analog_underline"
        android:id="@+id/tv_analogs_s_Analogs"
        style="@style/s_MenuItems"
        android:layout_below="@+id/tv_analogs_n_Drug"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv_analogs"
        android:layout_below="@+id/tv_analogs_s_Analogs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        style="@style/ListView_withoutDeviders"
        android:layout_above="@+id/tv_analogs_Text"
        android:background="@drawable/cm1_border_field"
        android:padding="6dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_drug_cost"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv_analogs_n_Drug"
        style="@style/s_chosen_drug" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_analogs_s_Drug"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:onClick="onClickDrugNotice"
        android:nestedScrollingEnabled="true"
        android:id="@+id/tv_hidden_button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonComparePrices"
        android:id="@+id/b_analogs_compare"
        style="@style/cm_buttons"
        android:enabled="true"
        android:onClick="onClickComparePrices"
        android:layout_alignParentBottom="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/s_analogs_Aptek"

        android:focusable="false"

        android:spinnerMode="dropdown"
        android:layout_above="@+id/b_analogs_compare"
        android:scrollIndicators="right"
        android:layout_toRightOf="@+id/iv_info_aptek"
        android:layout_marginLeft="5dp" />

    <WebView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_analogs_Text"

        android:scrollIndicators="none"

        android:layout_marginTop="5dp"
        android:layout_above="@+id/iv_info_aptek" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progBar_compareCosts"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="40px"
        android:layout_height="40px"
        android:id="@+id/iv_info_aptek"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/b_analogs_compare"
        android:src="@drawable/info_aptek"
        android:scaleType="fitCenter"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/no_data"
        android:onClick="onClickDrugstoreInfo" />

</RelativeLayout>
